--- a/app/views/works/_fields_edit.html.erb
+++ b/app/views/works/_fields_edit.html.erb
@@ -2,9 +2,9 @@
 
 <div class="control-group">
   <label>Start</label>
-  <%= time_select("work", "from", {:minute_step => 10}, {:class=>"span1"}) %>
+  <%= time_select("work", "from", {:minute_step => 10}, {:class=>"span1 time"}) %>
   <label>Finish</label>
-  <%= time_select("work", "to", {:minute_step => 10}, {:class=>"span1"}) %>
+  <%= time_select("work", "to", {:minute_step => 10}, {:class=>"span1 time"}) %>
 </div>
 
 <div class="control-group">
