--- a/app/views/tags/_tag.html.erb
+++ b/app/views/tags/_tag.html.erb
@@ -1,4 +1,5 @@
 <tr>
   <td><%= tag.name %> </td>
+  <td><%= link_to "edit", edit_tag_path(tag), :class=>"btn btn-mini" %></td>
   <td><%= link_to "delete", tag, :method => :delete, :confirm => "You sure?", :title => tag.name, :class=>"btn btn-mini btn-danger" %></td>
 </tr>
