--- a/app/views/shared/_timeline.html.erb
+++ b/app/views/shared/_timeline.html.erb
@@ -1,5 +1,5 @@
 <div class="alert alert-info" style="padding-left: 5px; padding-right: 5px;">
-  <table width="100%" border=1>
+  <table width="100%" border=0>
     <tr>
       <% 24.times do |i| %>
 			<td align="center" colspan="6"> <%= (i<10 ? "0#{i}":"#{i}") %> </td>
@@ -7,32 +7,54 @@
     </tr>
     <tr height="10px;">
       <%
-      colors = ['green', 'yellow', 'white']
-	  color = colors[0]
 	  144.times do |i|
-        color = colors[rand(3)] if i%6 == 0
       %>
-        <td style="background-color: <%=color%>;" class="timeline_minutes" id="<%= i*10%>"></td>
+        <td style="background-color: white" class="timeline_minutes" id="<%= i*10%>"></td>
       <% end %>
     </tr>
   </table>
 </div>
 
-
 <script type="text/javascript">
     $(document).ready(function () {
         $(".timeline_minutes").click( function (){
-                    min = $(this).attr("id");
-                    console.log( min );
-                    if( min > 60) {
-                        time = Math.floor(min/60) + 'h ' + min%60 + ' min';
-                    }else{
-                        time = '0 h ' + min + ' min';
-                    }
 
-                    console.log( time );
-                    //alert('time element clicked:'+min);
+        });
+
+        /*$(".timeline_minutes").hover(
+            // in
+            function (){
+                min = $(this).attr("id");
+                console.log( min );
+
+                if( min >= 60) {
+                    time = (
+                            Math.floor(min/60)<10
+                                ? '0'+Math.floor(min/60)
+                                : Math.floor(min/60)
+                            )
+                            + ':'
+                            + (
+                                min%60 == 0
+                                    ? '00'
+                                    : min%60
+                            );
+                }else{
+                    time = '00:' + (
+                                    min==0
+                                        ? '00'
+                                        : min
+                                    );
                 }
-        );
-    });
+                console.log( time );
+                //$(this).attr("data-original-title", time);
+                $(this).tooltip({animation:false, placement:'bottom', title: time});
+            },
+            // out
+            function (){
+
+            }
+        );*/
+
+     });
 </script>
