--- a/app/views/works/edit.html.erb
+++ b/app/views/works/edit.html.erb
@@ -1,4 +1,6 @@
-<%= render 'shared/timeline' %>
+<%=
+#    render 'shared/timeline'
+%>
 
 <%= form_for(@work, :html => { :class => "well"}) do |f| %>
     <fieldset>
