change controllers logic, move show method to work controller

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,54 +1,2 @@
-<div class="current_date">
-  <%= link_to "<<", user_path(current_user, :d=>day_before(@current_day)), :class=>"btn btn-mini " %>
-  <%= @current_day.strftime("%A, %d %b %Y") %>
-  <%= link_to ">>", user_path(current_user, :d=>day_after(@current_day)), :class=>"btn btn-mini " %>
-</div>
-
-<%= render 'shared/timeline' %>
-
-<% unless @works.empty? %>
-    <table class="table table-striped">
-      <thead>
-          <tr>
-            <th width="5%">From</th>
-            <th width="5%">To</th>
-            <th width="8%">Duration</th>
-            <th width="42%">Description</th>
-            <th width="12%">Category</th>
-            <th width="5%"></th>
-            <th width="5%"></th>
-            <th width="8%"></th>
-          </tr>
-      </thead>
-      <%= render @works %>
-    </table>
-<% end %>
-
-<% flash.each do |key, value| %>
-    <div class="alert alert-<%= key %>"><%= value %></div>
-<% end %>
-
-<%= form_for(@work, :html => { :class => "well form-inline" }) do |f| %>
-  <%= render 'shared/error_messages', :object => f.object %>
-
-    From
-    <input id="work_from_1i" type="hidden" value="<%= @current_day.year %>" name="work[from(1i)]">
-    <input id="work_from_2i" type="hidden" value="<%= @current_day.month %>" name="work[from(2i)]">
-    <input id="work_from_3i" type="hidden" value="<%= @current_day.day %>" name="work[from(3i)]">
-    <%= time_select("work", "from", {:minute_step => 10, :ignore_date=>true}, {:class=>"span1 time"}) %>
-
-    &nbsp;&nbsp;To
-    <input id="work_to_1i" type="hidden" value="<%= @current_day.year %>" name="work[to(1i)]">
-    <input id="work_to_2i" type="hidden" value="<%= @current_day.month %>" name="work[to(2i)]">
-    <input id="work_to_3i" type="hidden" value="<%= @current_day.day %>" name="work[to(3i)]">
-    <%= time_select("work", "to", {:minute_step => 10, :ignore_date=>true}, {:class=>"span1 time"}) %>
-
-    <%= collection_select(:work, :category_ids, @user.categories, :id, :name, options = {:prompt => '--Category--'}, html_options = {:multiple => false, :size => 1, :class=>"span2"})%>
-
-    <%= f.text_field :description, {:class =>"input-large",:placeholder=>"Activity description"} %>
-
-    <%= f.submit "Add activity", :class=>"btn btn-primary" %>
-
-<% end %>
-
-<%= render('shared/work_categories_js') %>
+<div> User profile would be here</div>
+<%= link_to "Edit profile", edit_user_path(current_user) %>
