--- a/app/views/works/edit.html.erb
+++ b/app/views/works/edit.html.erb
@@ -1,6 +1,6 @@
-<%=
-#    render 'shared/timeline'
-%>
+<%= render 'timeline' %>
+
+<%= render 'works'%>
 
 <%= form_for(@work, :html => { :class => "well"}) do |f| %>
     <fieldset>
