--- a/app/views/layouts/_sidebar_signin.html.erb
+++ b/app/views/layouts/_sidebar_signin.html.erb
@@ -2,12 +2,12 @@
   <div class="well sidebar-nav">
     <ul class="nav nav-list">
       <li class="nav-header">Actions</li>
-      <li class="<%= active_menu?('users#show', false) %>"><%= link_to "Works", user_path(current_user) %></li>
+      <li class="<%= active_menu?('works') %>"><%= link_to "Works", work_path(current_user) %></li>
       <li class="<%= active_menu?('') %>"><a href="#">Search</a></li>
       <li class="<%= active_menu?('') %>"><a href="#">Reports</a></li>
       <li class="<%= active_menu?('sources') %>"><%= link_to "Resources", source_path(current_user) %></li>
       <li class="nav-header">Settings</li>
-      <li class="<%= active_menu?('users#edit', false) %>"><%= link_to "Profile", edit_user_path(current_user) %></li>
+      <li class="<%= active_menu?('users#edit', false) %>"><%= link_to "Profile", user_path(current_user) %></li>
       <li class="<%= active_menu?('categories') %>"><%= link_to "Categories", category_path(current_user) %></li>
       <li class="<%= active_menu?('tags') %>"><%= link_to "Tags", tag_path(current_user) %></li>
       <li><a href="#">Routins</a></li>
