add automatic setect set up for initial values

--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -35,4 +35,6 @@
 
 <% end %>
 
-<%= render('work_categories_js') %>
+<%= render 'work_categories_js' %>
+
+<%= render 'work_form_time_adjust_js' %>
