--- a/app/views/layouts/_sidebar_signin.html.erb
+++ b/app/views/layouts/_sidebar_signin.html.erb
@@ -7,7 +7,7 @@
       <li class="<%= active_menu?('') %>"><a href="#">Reports</a></li>
       <li class="<%= active_menu?('sources') %>"><%= link_to "Resources", source_path(current_user) %></li>
       <li class="nav-header">Settings</li>
-      <li class="<%= active_menu?('users#edit', false) %>"><%= link_to "Profile", user_path(current_user) %></li>
+      <li class="<%= active_menu?('users') %>"><%= link_to "Profile", user_path(current_user) %></li>
       <li class="<%= active_menu?('categories') %>"><%= link_to "Categories", category_path(current_user) %></li>
       <li class="<%= active_menu?('tags') %>"><%= link_to "Tags", tag_path(current_user) %></li>
       <li><a href="#">Routins</a></li>
