--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -1,8 +1,4 @@
-<div class="current_date">
-  <%= link_to "<<", work_path(current_user, :d=>day_before(@current_day)), :class=>"btn btn-mini " %>
-  <%= @current_day.strftime("%A, %d %b %Y") %>
-  <%= link_to ">>", work_path(current_user, :d=>day_after(@current_day)), :class=>"btn btn-mini " %>
-</div>
+<%= render 'datepicker' %>
 
 <%= render 'timeline' %>
 
