add validations for work

--- a/app/views/works/_fields.html.erb
+++ b/app/views/works/_fields.html.erb
@@ -24,7 +24,7 @@
 
 <script language="JavaScript" >
   $(document).ready( function() {
-    $("#work_submit").click( function (){
+    $("#work_submit_").click( function (){
         // make validation before adding new activity
         from_h = $("#work_from_4i").val();
         from_m = $("#work_from_5i").val();
