add delete and update actions for routines

--- a/app/views/routines/_fields.html.erb
+++ b/app/views/routines/_fields.html.erb
@@ -172,23 +172,4 @@
 
 <% end %>
 
-
-<script language="JavaScript" >
-
-  $(document).ready( function (){
-    $('#checkbox_all_days').change(
-        function (){
-            $("input[name='routine[days][]']").attr('checked', this.checked);
-        }
-    )
-
-    $('#checkbox_all_weeks').change(
-        function (){
-            $("input[name='routine[weeks][]']").attr('checked', this.checked);
-        }
-    )
-
-  });
-
-
-</script>
+<%= render 'all_checkbox_js' %>
